--- a/assets/locale/He/common.json
+++ b/assets/locale/He/common.json
@@ -1,3 +1,7 @@
 {
-  "HOME_PAGE": "דף הבית"
+  "HOME_PAGE": "דף הבית",
+  "ABOUT_PAGE": "אודות",
+  "LANGUAGES": "שפות",
+  "HOME_PAGE_TITLE": "כותרת דף הבית",
+  "ABOUT_TITLE": "כותרת דף אודות"
 }
