example dialog title change

--- a/assets/locale/He/common.json
+++ b/assets/locale/He/common.json
@@ -3,5 +3,5 @@
   "ABOUT_PAGE": "אודות",
   "LANGUAGES": "שפות",
   "HOME_PAGE_TITLE": "כותרת דף הבית",
-  "ABOUT_TITLE": "כותרת דף אודות"
+  "ABOUT_PAGE_TITLE": "כותרת דף אודות"
 }
