WIP: styled-components implementation

--- a/src/assets/locale/He/common.json
+++ b/src/assets/locale/He/common.json
@@ -1,4 +1,6 @@
 {
+  "WELCOME_TITLE": "התחלה טובה",
+  "WELCOME_MESSAGE": "שלום מ - app.page.jsx",
   "HOME_PAGE": "דף הבית",
   "ABOUT_PAGE": "אודות",
   "LANGUAGES": "שפות",
